[package]
name = "libp2p-autorelay"
version = "0.1.0-alpha.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "(WIP) Implementation of autorelay for libp2p"
repository = "https://github.com/dariusc93/libp2p-autorelay"
readme = "README.md"
keywords = ["libp2p", "p2p", "networking"]
authors = ["Darius Clark"]
exclude = [".gitignore"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = { version = "0.51", features = ["relay"] }
# TODO: Use Cid and Multihash directly
# libipld = "0.15"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
wasm-timer = "0.2"
log = "0.4"
void = "1.0"
rand = "0.8"

[dev-dependencies]
libipld = "0.15"
libp2p = { version = "0.51", features = ["full"] }
async-std = { version = "1", features = ["attributes"] }
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
libp2p-nat = { version = "0.2", default-features = false, features = ["async-std"] }
